# model/src/main/java/com/showtime/model/view/sc/ScView.java
@@ -1,25 +1,7 @@
 package com.showtime.model.view.sc;
 
-import com.showtime.model.entity.sc.Sc;
-import io.swagger.annotations.ApiModel;
-
-import javax.persistence.ColumnResult;
-import javax.persistence.EntityResult;
-import javax.persistence.FieldResult;
-import javax.persistence.SqlResultSetMapping;
-import java.io.Serializable;
-
-/**
- * <b><code>ScView</code></b>
- * <p/>
- * Sc的具体实现
- * <p/>
- * <b>Creation Time:</b> Fri Oct 06 11:02:15 CST 2017.
- *
- * @author qinJianLun
- * @version 1.0.0
- * @since andy-model 1.0.0
- */
+import java.math.BigDecimal;
+import java.util.Date;
 //@SqlResultSetMapping
 //        (
 //                name = "ScViewResults",
@@ -61,18 +43,115 @@ import java.io.Serializable;
 //
 //                }
 //        )
-@ApiModel
-public class ScView extends Sc implements Serializable {
+public class ScView {
 
-    /**
-     * The constant serialVersionUID.
-     */
-    private static final long serialVersionUID = -1L;
+    private Long id;
+
+    private Date createTime;
+
+    private Date updateTime;
+
+    private Integer studentNumber;
+
+    private String courseNumber;
+
+    private BigDecimal fraction;
+
+    private Integer gradeRanking;
+
+    private String gradeRankingPercent;
+
+    private Integer classRanking;
+
+    private String classRankingPercent;
 
     private String studentName;
+
     private String className;
+
     private String grade;
+
     private String courseName;
+
+    public Long getId() {
+        return id;
+    }
+
+    public void setId(Long id) {
+        this.id = id;
+    }
+
+    public Date getCreateTime() {
+        return createTime;
+    }
+
+    public void setCreateTime(Date createTime) {
+        this.createTime = createTime;
+    }
+
+    public Date getUpdateTime() {
+        return updateTime;
+    }
+
+    public void setUpdateTime(Date updateTime) {
+        this.updateTime = updateTime;
+    }
+
+    public Integer getStudentNumber() {
+        return studentNumber;
+    }
+
+    public void setStudentNumber(Integer studentNumber) {
+        this.studentNumber = studentNumber;
+    }
+
+    public String getCourseNumber() {
+        return courseNumber;
+    }
+
+    public void setCourseNumber(String courseNumber) {
+        this.courseNumber = courseNumber;
+    }
+
+    public BigDecimal getFraction() {
+        return fraction;
+    }
+
+    public void setFraction(BigDecimal fraction) {
+        this.fraction = fraction;
+    }
+
+    public Integer getGradeRanking() {
+        return gradeRanking;
+    }
+
+    public void setGradeRanking(Integer gradeRanking) {
+        this.gradeRanking = gradeRanking;
+    }
+
+    public String getGradeRankingPercent() {
+        return gradeRankingPercent;
+    }
+
+    public void setGradeRankingPercent(String gradeRankingPercent) {
+        this.gradeRankingPercent = gradeRankingPercent;
+    }
+
+    public Integer getClassRanking() {
+        return classRanking;
+    }
+
+    public void setClassRanking(Integer classRanking) {
+        this.classRanking = classRanking;
+    }
+
+    public String getClassRankingPercent() {
+        return classRankingPercent;
+    }
+
+    public void setClassRankingPercent(String classRankingPercent) {
+        this.classRankingPercent = classRankingPercent;
+    }
 
     public String getStudentName() {
         return studentName;
@@ -104,19 +183,5 @@ public class ScView extends Sc implements Serializable {
 
     public void setCourseName(String courseName) {
         this.courseName = courseName;
-    }
-
-    public ScView(Sc sc) {
-        super(sc.getCreateTime(), sc.getUpdateTime(), sc.getStudentNumber(), sc.getCourseNumber(), sc.getFraction(),sc.getGradeRanking(), sc.getGradeRankingPercent(), sc.getClassRanking(), sc.getClassRankingPercent());
-    }
-
-    public ScView(Sc sc, String studentName, String courseName) {
-        super(sc.getCreateTime(), sc.getUpdateTime(), sc.getStudentNumber(), sc.getCourseNumber(), sc.getFraction(),sc.getGradeRanking(), sc.getGradeRankingPercent(), sc.getClassRanking(), sc.getClassRankingPercent());
-        this.studentName = studentName;
-        this.courseName = courseName;
-    }
-
-    public ScView(){
-
     }
 }
