# rs/generated/swagger-ui/swagger.json
@@ -29,8 +29,6 @@
   }, {
     "name" : "学生接口"
   }, {
-    "name" : "性别接口"
-  }, {
     "name" : "成绩接口"
   }, {
     "name" : "班级接口"
@@ -763,13 +761,6 @@
           "required" : false,
           "type" : "number"
         }, {
-          "name" : "preCourse",
-          "in" : "query",
-          "description" : "先修课id号",
-          "required" : false,
-          "type" : "integer",
-          "format" : "int64"
-        }, {
           "name" : "pageNumber",
           "in" : "query",
           "description" : "页数",
@@ -872,23 +863,6 @@
           },
           "500" : {
             "description" : "internal Server Error"
-          }
-        }
-      }
-    },
-    "/api/v1/courses/preCourses/all" : {
-      "get" : {
-        "tags" : [ "课程接口" ],
-        "summary" : "获取课程列表",
-        "description" : "通过查询条件获取课程列表",
-        "operationId" : "getAllPreCourses",
-        "produces" : [ "application/json;charset=UTF-8" ],
-        "responses" : {
-          "200" : {
-            "description" : "successful request"
-          },
-          "500" : {
-            "description" : "internal server error"
           }
         }
       }
@@ -1004,228 +978,6 @@
           "name" : "id",
           "in" : "path",
           "description" : "课程id",
-          "required" : true,
-          "type" : "integer",
-          "format" : "int64"
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "successful request"
-          },
-          "500" : {
-            "description" : "internal server error"
-          }
-        }
-      }
-    },
-    "/api/v1/genders" : {
-      "get" : {
-        "tags" : [ "性别接口" ],
-        "summary" : "获取性别列表",
-        "description" : "通过查询条件获取性别列表",
-        "operationId" : "getGenders",
-        "produces" : [ "application/json;charset=UTF-8" ],
-        "parameters" : [ {
-          "name" : "gender",
-          "in" : "query",
-          "description" : "性别",
-          "required" : false,
-          "type" : "string"
-        }, {
-          "name" : "pageNumber",
-          "in" : "query",
-          "description" : "页数",
-          "required" : false,
-          "type" : "integer",
-          "default" : 0,
-          "format" : "int32"
-        }, {
-          "name" : "pageSize",
-          "in" : "query",
-          "description" : "每页加载量",
-          "required" : false,
-          "type" : "integer",
-          "default" : 10,
-          "format" : "int32"
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "successful request"
-          },
-          "500" : {
-            "description" : "internal server error"
-          }
-        }
-      },
-      "post" : {
-        "tags" : [ "性别接口" ],
-        "summary" : "创建性别",
-        "description" : "创建一个性别",
-        "operationId" : "createGender",
-        "produces" : [ "application/json;charset=UTF-8" ],
-        "parameters" : [ {
-          "in" : "body",
-          "name" : "body",
-          "description" : "性别",
-          "required" : true,
-          "schema" : {
-            "$ref" : "#/definitions/GenderView"
-          }
-        } ],
-        "responses" : {
-          "201" : {
-            "description" : "successful operation",
-            "headers" : {
-              "location" : {
-                "type" : "string",
-                "description" : "URL of new created resource"
-              }
-            }
-          },
-          "409" : {
-            "description" : "conflict"
-          },
-          "500" : {
-            "description" : "internal server error"
-          }
-        }
-      },
-      "delete" : {
-        "tags" : [ "性别接口" ],
-        "summary" : "删除性别",
-        "description" : "批量删除性别",
-        "operationId" : "deleteGenders",
-        "produces" : [ "application/json;charset=UTF-8" ],
-        "parameters" : [ {
-          "in" : "body",
-          "name" : "body",
-          "description" : "性别ids，样例 - 1,2,3",
-          "required" : true,
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "successful request"
-          },
-          "500" : {
-            "description" : "internal server error"
-          }
-        }
-      }
-    },
-    "/api/v1/genders/search" : {
-      "get" : {
-        "tags" : [ "性别接口" ],
-        "summary" : "通过关键字搜索性别",
-        "description" : "通过关键字搜索性别",
-        "operationId" : "getGenderByKeyword",
-        "produces" : [ "application/json;charset=UTF-8" ],
-        "parameters" : [ {
-          "name" : "keyword",
-          "in" : "query",
-          "description" : "关键字",
-          "required" : true,
-          "type" : "string"
-        }, {
-          "name" : "pageNumber",
-          "in" : "query",
-          "description" : "页数",
-          "required" : false,
-          "type" : "integer",
-          "default" : 0,
-          "format" : "int32"
-        }, {
-          "name" : "pageSize",
-          "in" : "query",
-          "description" : "每页加载量",
-          "required" : false,
-          "type" : "integer",
-          "default" : 10,
-          "format" : "int32"
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "successful request"
-          },
-          "500" : {
-            "description" : "internal server error"
-          }
-        }
-      }
-    },
-    "/api/v1/genders/{id}" : {
-      "get" : {
-        "tags" : [ "性别接口" ],
-        "summary" : "获取单个性别",
-        "description" : "通过id获取性别",
-        "operationId" : "getGender",
-        "produces" : [ "application/json;charset=UTF-8" ],
-        "parameters" : [ {
-          "name" : "id",
-          "in" : "path",
-          "description" : "性别id",
-          "required" : true,
-          "type" : "integer",
-          "format" : "int64"
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "successful request"
-          },
-          "500" : {
-            "description" : "internal server error"
-          }
-        }
-      },
-      "put" : {
-        "tags" : [ "性别接口" ],
-        "summary" : "更新性别",
-        "description" : "更新性别信息",
-        "operationId" : "updateGenders",
-        "produces" : [ "application/json;charset=UTF-8" ],
-        "parameters" : [ {
-          "name" : "id",
-          "in" : "path",
-          "description" : "性别id",
-          "required" : true,
-          "type" : "integer",
-          "format" : "int64"
-        }, {
-          "in" : "body",
-          "name" : "body",
-          "description" : "性别信息",
-          "required" : true,
-          "schema" : {
-            "$ref" : "#/definitions/GenderView"
-          }
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "successful"
-          },
-          "404" : {
-            "description" : "not found"
-          },
-          "409" : {
-            "description" : "conflict"
-          },
-          "500" : {
-            "description" : "internal Server Error"
-          }
-        }
-      },
-      "delete" : {
-        "tags" : [ "性别接口" ],
-        "summary" : "删除性别",
-        "description" : "通过id删除性别",
-        "operationId" : "deleteGender",
-        "produces" : [ "application/json;charset=UTF-8" ],
-        "parameters" : [ {
-          "name" : "id",
-          "in" : "path",
-          "description" : "性别id",
           "required" : true,
           "type" : "integer",
           "format" : "int64"
@@ -1654,20 +1406,6 @@
         "operationId" : "getScs",
         "produces" : [ "application/json;charset=UTF-8" ],
         "parameters" : [ {
-          "name" : "createTime",
-          "in" : "query",
-          "description" : "添加时间",
-          "required" : false,
-          "type" : "string",
-          "format" : "date-time"
-        }, {
-          "name" : "updateTime",
-          "in" : "query",
-          "description" : "更新时间",
-          "required" : false,
-          "type" : "string",
-          "format" : "date-time"
-        }, {
           "name" : "studentNumber",
           "in" : "query",
           "description" : "学号",
@@ -1719,24 +1457,12 @@
           "type" : "integer",
           "format" : "int32"
         }, {
-          "name" : "gradeRankingPercent",
-          "in" : "query",
-          "description" : "全级排名百分比",
-          "required" : false,
-          "type" : "string"
-        }, {
           "name" : "classRanking",
           "in" : "query",
           "description" : "班级排名",
           "required" : false,
           "type" : "integer",
           "format" : "int32"
-        }, {
-          "name" : "classRankingPercent",
-          "in" : "query",
-          "description" : "班级排名百分比",
-          "required" : false,
-          "type" : "string"
         }, {
           "name" : "sort",
           "in" : "query",
@@ -2129,23 +1855,6 @@
         "summary" : "获取班级列表",
         "description" : "获取班级列表",
         "operationId" : "getAllClassNames",
-        "produces" : [ "application/json;charset=UTF-8" ],
-        "responses" : {
-          "200" : {
-            "description" : "successful request"
-          },
-          "500" : {
-            "description" : "internal server error"
-          }
-        }
-      }
-    },
-    "/api/v1/students/genders/all" : {
-      "get" : {
-        "tags" : [ "学生接口" ],
-        "summary" : "获取性别列表",
-        "description" : "获取性别列表",
-        "operationId" : "getAllGenders",
         "produces" : [ "application/json;charset=UTF-8" ],
         "responses" : {
           "200" : {
@@ -3013,23 +2722,7 @@
         "avgFraction" : {
           "type" : "number"
         },
-        "preCourse" : {
-          "type" : "integer",
-          "format" : "int64"
-        },
         "preCourseName" : {
-          "type" : "string"
-        }
-      }
-    },
-    "GenderView" : {
-      "type" : "object",
-      "properties" : {
-        "id" : {
-          "type" : "integer",
-          "format" : "int64"
-        },
-        "gender" : {
           "type" : "string"
         }
       }
@@ -3057,12 +2750,12 @@
           "format" : "int64"
         },
         "createTime" : {
-          "type" : "integer",
-          "format" : "int64"
+          "type" : "string",
+          "format" : "date-time"
         },
         "updateTime" : {
-          "type" : "integer",
-          "format" : "int64"
+          "type" : "string",
+          "format" : "date-time"
         },
         "studentNumber" : {
           "type" : "integer",
@@ -3072,24 +2765,21 @@
           "type" : "string"
         },
         "fraction" : {
-          "type" : "integer",
-          "format" : "int32"
+          "type" : "number"
         },
         "gradeRanking" : {
           "type" : "integer",
           "format" : "int32"
         },
         "gradeRankingPercent" : {
-          "type" : "integer",
-          "format" : "int32"
+          "type" : "string"
         },
         "classRanking" : {
           "type" : "integer",
           "format" : "int32"
         },
         "classRankingPercent" : {
-          "type" : "integer",
-          "format" : "int32"
+          "type" : "string"
         },
         "studentName" : {
           "type" : "string"
@@ -3133,7 +2823,8 @@
           "format" : "int64"
         },
         "studentNumber" : {
-          "type" : "string"
+          "type" : "integer",
+          "format" : "int32"
         },
         "name" : {
           "type" : "string"
