# rs/src/main/java/com/showtime/controller/course/CourseController.java
@@ -3,7 +3,6 @@ package com.showtime.controller.course;
 import com.showtime.model.message.ErrorResponseMessage;
 import com.showtime.model.message.Message;
 import com.showtime.model.view.course.CourseView;
-import com.showtime.model.view.course.PreCourseView;
 import com.showtime.service.commons.utils.message.MessageCode;
 import com.showtime.service.commons.utils.message.MessageDescription;
 import com.showtime.service.commons.utils.message.MessageStatus;
@@ -23,7 +22,6 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.web.util.UriComponentsBuilder;
 
 import java.math.BigDecimal;
-import java.util.List;
 
 /**
  * <b><code>CourseController</code></b>
@@ -172,7 +170,7 @@ public class CourseController {
                     @ApiParam(value = "学时", defaultValue = "", required = false) @RequestParam(value = "learnHours", defaultValue = "",  required = false) String learnHours,
                     @ApiParam(value = "学分", defaultValue = "", required = false) @RequestParam(value = "credit", defaultValue = "",  required = false) String credit,
                     @ApiParam(value = "平均分", defaultValue = "", required = false) @RequestParam(value = "avgFraction",   required = false) BigDecimal avgFraction,
-                    @ApiParam(value = "先修课id号", defaultValue = "", required = false) @RequestParam(value = "preCourse", defaultValue = "-2147483648",  required = false) Long preCourse,
+                    //@ApiParam(value = "先修课id号", defaultValue = "", required = false) @RequestParam(value = "preCourse", defaultValue = "-2147483648",  required = false) Long preCourse,
                     @ApiParam(value = "页数", defaultValue = "0", required = false) @RequestParam(value = "pageNumber", defaultValue = "0", required = false) int pageNumber,
             @ApiParam(value = "每页加载量", defaultValue = "10", required = false) @RequestParam(value = "pageSize", defaultValue = "10", required = false) int pageSize) {
         try {
